components/elastic/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: elastic
  name: kibana
spec:
  type: NodePort
  selector:
    app: kibana
  ports:
    - port: 80
      targetPort: ui
  externalTrafficPolicy: Cluster
