components/elastic/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: integrated
  name: kibana 
  namespace: elastic 
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /kibana
            backend:
              service:
                name: kibana
                port:
                  number: 80 
            pathType: Prefix
